fix(): decrease launchpad item min-width
redundancy for scrollbar

--- a/bricks/nav/src/launchpad-button-v2/styles.shadow.css
+++ b/bricks/nav/src/launchpad-button-v2/styles.shadow.css
@@ -210,7 +210,7 @@
 
 .menu-groups,
 .recent-visits {
-  grid-template-columns: repeat(auto-fill, minmax(168px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
 }
 
 .menu-groups {
