--- a/bricks/nav/src/search-launchpad/styles.shadow.css
+++ b/bricks/nav/src/search-launchpad/styles.shadow.css
@@ -139,7 +139,7 @@
 }
 
 .menu-groups {
-  grid-template-columns: repeat(auto-fill, minmax(168px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
 }
 
 .menu-groups {
